bootstrap/tests/snapshots/semantics_tests__err_for_par_chunk_invalid.diag.snap
---
source: tests/semantics_tests.rs
expression: error_msg
---

● : E0702: `chunk` option must be a positive integer.
────────────────────────────────────────────────────────────

  ⓘ E0702: `chunk` option must be a positive integer.
────────────────────────────────────────────────────────────
