bootstrap/tests/snapshots/semantics_tests__err_invalid_await_call.diag.snap
---
source: tests/semantics_tests.rs
expression: error_msg
---

● : E0603: `par` calls complete eagerly and cannot be awaited.
────────────────────────────────────────────────────────────

  ⓘ E0603: `par` calls complete eagerly and cannot be awaited.
────────────────────────────────────────────────────────────
