bootstrap/tests/snapshots/semantics_tests__err_length_invalid.diag.snap
---
source: tests/semantics_tests.rs
assertion_line: 38
expression: error_msg
---

● : E0005: `.length` is only available on strings, bytes, and arrays. Consider `.count()` for iterables.
────────────────────────────────────────────────────────────

  ⓘ E0005: `.length` is only available on strings, bytes, and arrays. Consider `.count()` for iterables.
────────────────────────────────────────────────────────────
