bootstrap/tests/snapshots/semantics_tests__err_task_double_await.diag.snap
---
source: tests/semantics_tests.rs
expression: error_msg
---

● : E0604: handle 'handle' awaited more than once.
────────────────────────────────────────────────────────────

  ⓘ E0604: handle 'handle' awaited more than once.
────────────────────────────────────────────────────────────
