bootstrap/tests/snapshots/semantics_tests__err_task_never_awaited.diag.snap
---
source: tests/semantics_tests.rs
expression: error_msg
---

● : W0601: task handle 'handle' is never awaited.
────────────────────────────────────────────────────────────

  ⓘ W0601: task handle 'handle' is never awaited.
────────────────────────────────────────────────────────────
