bootstrap/tests/snapshots/semantics_tests__ok_private_access.sem.snap
---
source: tests/semantics_tests.rs
expression: json
---
{
  "items": [
    {
      "Class": {
        "name": "Persona",
        "type_params": [],
        "implements": [],
        "members": [
          {
            "Field": {
              "name": "__dni",
              "visibility": "Private",
              "type_ref": {
                "Simple": "string"
              },
              "init": null,
              "is_optional": false
            }
          },
          {
            "Method": {
              "name": "getDni",
              "visibility": "Public",
              "type_params": [],
              "params": [],
              "return_type": {
                "Simple": "string"
              },
              "body": {
                "stmts": [
                  {
                    "Return": {
                      "expr": {
                        "Member": {
                          "object": {
                            "Identifier": "this"
                          },
                          "property": "__dni"
                        }
                      }
                    }
                  }
                ]
              },
              "expr_body": {
                "Member": {
                  "object": {
                    "Identifier": "this"
                  },
                  "property": "__dni"
                }
              },
              "is_async_inferred": false,
              "contains_fail": false
            }
          }
        ],
        "needs_serde": false,
        "is_data": false
      }
    },
    {
      "Function": {
        "name": "main",
        "type_params": [],
        "params": [],
        "return_type": null,
        "body": {
          "stmts": [
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "p"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "StructLiteral": {
                    "type_name": "Persona",
                    "fields": [
                      [
                        "__dni",
                        {
                          "Literal": {
                            "String": "12345678"
                          }
                        }
                      ]
                    ]
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "dni"
                    },
                    "type_ref": null
                  }
                ],
                "init": {
                  "Member": {
                    "object": {
                      "Identifier": "p"
                    },
                    "property": "__dni"
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            }
          ]
        },
        "expr_body": null,
        "is_async_inferred": false,
        "contains_fail": false
      }
    }
  ]
}
