bootstrap/tests/snapshots/semantics_tests__ok_rust_types.sem.snap
---
source: tests/semantics_tests.rs
expression: json
---
{
  "items": [
    {
      "Function": {
        "name": "main",
        "type_params": [],
        "params": [],
        "return_type": null,
        "body": {
          "stmts": [
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "x"
                    },
                    "type_ref": {
                      "Simple": "i32"
                    }
                  }
                ],
                "init": {
                  "Literal": {
                    "Int": 42
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "y"
                    },
                    "type_ref": {
                      "Simple": "u64"
                    }
                  }
                ],
                "init": {
                  "Literal": {
                    "Int": 1000000
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "z"
                    },
                    "type_ref": {
                      "Simple": "f32"
                    }
                  }
                ],
                "init": {
                  "Literal": {
                    "Float": 3.14
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "w"
                    },
                    "type_ref": {
                      "Simple": "f64"
                    }
                  }
                ],
                "init": {
                  "Literal": {
                    "Float": 2.718281828
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "optional"
                    },
                    "type_ref": {
                      "Generic": {
                        "base": "Option",
                        "args": [
                          {
                            "Simple": "string"
                          }
                        ]
                      }
                    }
                  }
                ],
                "init": {
                  "Call": {
                    "callee": {
                      "Identifier": "Some"
                    },
                    "args": [
                      {
                        "Literal": {
                          "String": "hello"
                        }
                      }
                    ],
                    "exec_policy": "normal",
                    "type_args": []
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            },
            {
              "VarDecl": {
                "bindings": [
                  {
                    "pattern": {
                      "Identifier": "result"
                    },
                    "type_ref": {
                      "Generic": {
                        "base": "Result",
                        "args": [
                          {
                            "Simple": "number"
                          },
                          {
                            "Simple": "string"
                          }
                        ]
                      }
                    }
                  }
                ],
                "init": {
                  "Call": {
                    "callee": {
                      "Identifier": "Ok"
                    },
                    "args": [
                      {
                        "Literal": {
                          "Int": 42
                        }
                      }
                    ],
                    "exec_policy": "normal",
                    "type_args": []
                  }
                },
                "is_fallible": false,
                "or_fail_line": 0
              }
            }
          ]
        },
        "expr_body": null,
        "is_async_inferred": false,
        "contains_fail": false
      }
    }
  ]
}
